--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
+    <title>jonby</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,6 +50,9 @@
     
     <div class="links">
         <a href="https://github.com/jgdenby" target="_blank">GitHub</a>
+    </div>
+    <div class="links">
+        <a href="./Joseph_Denby_Resume.pdf" target="_blank">CV</a>
     </div>
 </body>
 </html>
