--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a href="https://github.com/jgdenby" target="_blank">GitHub</a>
     </div>
     <div class="links">
-        <a href="./Joseph_Denby_Resume.pdf" target="_blank">CV</a>
+        <a href="./Joseph_Denby_Resume_1.pdf" target="_blank">CV</a>
     </div>
 </body>
 </html>
