--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 <body>
     <h1>Joseph Denby</h1>
     
-    <!-- Replace with your actual photo path -->
-    <img src="./_assets/jonby_ted.jpeg" alt="Jo and Ted" class="profile-img">
+    <img src="./jonby_ted.jpeg" alt="Jo and Ted" class="profile-img">
     
     <p>
         I'm currently a Lead Data Scientist at Navy Federal Credit Union, where I lead projects using LLMs to stop money laundering and optimize internal knowledge sharing.   
