--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
 
+        
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DY8HWEXNWC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DY8HWEXNWC');
+    </script>
+
+
     <link rel="apple-touch-icon" sizes="180x180" href="./_assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./_assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./_assets/favicon-16x16.png">
