--- a/index.html
+++ b/index.html
@@ -22,46 +22,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jonby</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin: 20px 0;
-        }
-        .links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-            flex-wrap: wrap;
-        }
-        .links a {
-            text-decoration: none;
-            color: #333;
-            padding: 10px 15px;
-            background-color: #e0e0e0;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            display: inline-block;
-        }
-        .links a:hover {
-            background-color: #d0d0d0;
-            transform: scale(1.05);
-        }
-    </style>
 </head>
 <body>
+    <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <!-- <a href="projects.html">Interview Prep</a> -->
+    </nav>
+
     <h1>Joseph Denby</h1>
     
     <img src="./jonby_ted.jpeg" alt="Jo and Ted" class="profile-img">
