--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         gtag('config', 'G-DY8HWEXNWC');
     </script>
 
-
+    <link rel="stylesheet" href="styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./_assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./_assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./_assets/favicon-16x16.png">
