--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <nav class="nav-links">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <!-- <a href="projects.html">Interview Prep</a> -->
     </nav>
 
@@ -42,5 +42,7 @@
         <a href="./Joseph_Denby_Resume_1.pdf" target="_blank">CV</a>
         <a href="https://www.linkedin.com/in/joseph-denby/" target="_blank">LinkedIn</a>
     </div>
+
+    <
 </body>
 </html>
