--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <a href="https://www.linkedin.com/in/joseph-denby/" target="_blank">LinkedIn</a>
     </div>
 
-    <
+    <div class="interview-prep">
+        <h3>😻 Data Science Interview Prep 😻</h3>
+        <p>Looking to improve your interviewing skills and land your dream job? With experience hiring across enterprise companies and leading startups, I offer personalized interview prep at reasonable rates (including discounts for students). Let's connect - <a href="https://calendly.com/joseph-denby0/data-science-interview-prep">click here to learn more!</a></p>
+    </div>
 </body>
 </html>
