--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <div class="links">
         <a href="https://github.com/jgdenby" target="_blank">GitHub</a>
-        <a href="./Joseph_Denby_Resume_1.pdf" target="_blank">CV</a>
+        <a href="./Joseph_Denby_Resume.pdf" target="_blank">CV</a>
         <a href="https://www.linkedin.com/in/joseph-denby/" target="_blank">LinkedIn</a>
     </div>
 
