--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <img src="./jonby_ted.jpeg" alt="Jo and Ted" class="profile-img">
     
     <p>
-        I'm currently a Lead Data Scientist at Navy Federal Credit Union, where I lead projects using LLMs to stop money laundering and optimize internal knowledge sharing.   
+        I'm currently a Staff Data Scientist at Tilt, where I use AI and Machine Learning to expand credit access globally.   
     </p>
     
     <div class="links">
@@ -43,9 +43,5 @@
         <a href="https://www.linkedin.com/in/joseph-denby/" target="_blank">LinkedIn</a>
     </div>
 
-    <div class="interview-prep">
-        <h3>😻 Data Science Interview Prep 😻</h3>
-        <p>Looking to improve your interviewing skills and land your dream job? With experience hiring across enterprise companies and leading startups, I offer personalized interview prep at reasonable rates (including discounts for students). Let's connect - <a href="https://calendly.com/joseph-denby0/data-science-interview-prep">click here to learn more!</a></p>
-    </div>
 </body>
 </html>
